test/functions/vass/best-fns-in-diff-modules.good
best-fns-in-diff-modules.chpl:24: In function 'main':
best-fns-in-diff-modules.chpl:26: error: the best ref and const ref overloads are in different modules
best-fns-in-diff-modules.chpl:7: note: the best ref overload is here
best-fns-in-diff-modules.chpl:13: note: the best const ref overload is here
